apps/transmission/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission
  namespace: infra
spec:
  selector:
    app: transmission
  ports:
  - name: web
    port: 9091
    targetPort: 9091
    protocol: TCP
  - name: torrent
    port: 51413
    targetPort: 51413
    protocol: TCP
  - name: torrent-udp
    port: 51413
    targetPort: 51413
    protocol: UDP
